refine packages needed

--- a/endnote.bib
+++ b/endnote.bib
@@ -1911,7 +1911,7 @@ Publisher: American Psychological Association},
 	url = {https://guilfordjournals.com/doi/10.1521/soco.2010.28.4.538},
 	doi = {10.1521/soco.2010.28.4.538},
 	shorttitle = {Good Things Come Easy},
-	abstract = {Processing of evaluative information is a central theme in social cognition research. Most studies focus on processing advantages associated with negative information. Here, we demonstrate and explain the faster processing of positive information. Building on the âdensityâ hypothesis (Unkelbach et al., 2008), we predicted that this advantage is explained by higher subjective exposure to positive information, and not valence per se. We argue that subjective exposure is a phenomenological proxy for informational density in memory. Three studies confirmed this prediction. Study 1 found that people were faster to identify positive than negative words. Using path analysis, Study 2 demonstrated that subjective exposure accounted for this valence effect. Study 3 replicated these findings when objective frequency was controlled across positive and negative valence. The implications for theories of how evaluative information is detected, processed, and retrieved are discussed.},
+	abstract = {Processing of evaluative information is a central theme in social cognition research. Most studies focus on processing advantages associated with negative information. Here, we demonstrate and explain the faster processing of positive information. Building on the "density" hypothesis (Unkelbach et al., 2008), we predicted that this advantage is explained by higher subjective exposure to positive information, and not valence per se. We argue that subjective exposure is a phenomenological proxy for informational density in memory. Three studies confirmed this prediction. Study 1 found that people were faster to identify positive than negative words. Using path analysis, Study 2 demonstrated that subjective exposure accounted for this valence effect. Study 3 replicated these findings when objective frequency was controlled across positive and negative valence. The implications for theories of how evaluative information is detected, processed, and retrieved are discussed.},
 	pages = {538--555},
 	number = {4},
 	journaltitle = {Social Cognition},
