--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -88,14 +88,30 @@ Ideas:
 little value in relying on people's self-reported moral principles or moral ideals to predict their real life behaviors, "paradox of morality" (Ellemers, 2019);
 moral associative learning as an stronger predictor??
 -->
-[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
 
-[Two possible effect of moral character prioritization]
-Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people prioritize information with certain moral character? Focus on the valence of moral character, previous studies explore both negativity effect and positivity effect. The negativity effect, i.e., 'bad' character are prioritized, is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001; @pratto_automatic_1991]. A few studies provided evidence for this possibility. For example, @anderson_visual_2011 asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. Similarly, @eiserbeck_visual_2020 combined  associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
+<!--
+Big problem in science, 
+field domain
+what field knows
+remaining gap
 
-The positivity effect, i.e., good moral characters are prioritized, is also plausible [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
+Summary:
+        our approach
+        our results
+-->
 
-These two possibilities, however, ignore the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker []. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. A lot of studies revealed that people distort their perception, memory, and change their actions to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participant has spontaneous self-referential for the perception tasks where no self-referential process were not explicitly excluded [citation related to spontaneous self-referential].
+Morality is central to our social life. We not only experience a substantial amount of moral events every day [e.g., @hofmann_morality_2014] but also judge people’s moral character as "good" or "bad" all the time [@uhlmann_person-centered_2015]. Actually, moral character is so important that it is a basic dimension in social evaluation [@goodwin_moral_2014; @goodwin_moral_2015]. The information about the moral character of others helps us to distinguish between “us” and “them” [@ellemers_morality_2018] and decide who to cooperate with []. Because of its importance, we devote a substantial part of our conversations to gossiping about others' moral character [e.g., @dunbar_gossip_2004]. 
+
+The importance of moral character may also extend to perception []. A number of studies have explored the extent to which moral character prioritized in visual perception and suggested that moral information influence visual perception via top-down processes. However, the top-down account of moral character's effect on perception evoked a on-going debate in the literature [@firestone_bbs_2016;@jussim_interpretations_2016]. 
+
+The current study set out to examine the effect of moral character on perceptual decision-making. First, we conducted a series of experiment to examine the existence of a prioritization effect of moral character. The results of these experiments, i.e., a prioritization effect of good character, led us to the second question: why positive moral character are prioritized instead of negative moral character in perceptual matching task? We hypothesized that good character are prioritized because of a spontaneous self-referential processes instead of value-based attention. We tested this hypothesis with three experiments and found that the prioritization effect of good character only exist when moral character are self-referential but diminished when moral character are other-referential. These results further motivated us to test the automaticity of self-referential processing to moral character information. And we found that good character and self-relevant information automatically binding with each other and facilitate the perceptual decision-making.
+
+## Prioritization effect of moral character
+@anderson_visual_2011 conducted a study in which participants were asked to associate faces with different behaviors (e.g., negative and neutral behaviors from social and nonsocial domains) and then performed a binocular rivalry task. The results of this study indicated that faces associated with negative social behaviors dominated participants' visual awareness for a longer time compared to faces associated with other types of behaviors  [but see @stein_no_2017]. @eiserbeck_visual_2020 also reported the influence of bad moral character on perception by combining associative learning with the attentional blink paradigm. This study found that neutral faces associated with negative behaviors were processed preferentially. The effect of good moral characters was also reported in studies. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.However, 
+
+## Value-based attention or self-referential process?
+
+These studies, however, ignored the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker [@juechems_where_2019]. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. Empirical evidence supported the notion that people distort their perception [], memory [], and change their actions [] to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participants has spontaneous self-referential process for the perception tasks where no self-referential process were not explicitly excluded [citation related to spontaneous self-referential].
 
 Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character. In all experiments, a social associative learning task in which th effect of physical features are minimized — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. 
 
@@ -271,6 +287,9 @@ sdt_val_m1 <- brms::brm(saymatch ~ 0 + Valence + Valence:ismatch +
                                 (0 + Valence + Valence:ismatch  | ExpID_new:Subject),
                         family = bernoulli(link="probit"), 
                         data = df_moral,
+                        chains = 4,
+                        iter = 4000,
+                        thin = 2,
                         control = list(adapt_delta = .95),
                         cores = parallel::detectCores(),
                         backend = 'cmdstanr',  # with cmdstanr
@@ -483,18 +502,20 @@ df_dprime1_diff_hdi <- df_m1_plot_sdt_diff %>%
 
 # fit a three-level hierarchical model for RT, didn't specify the prior, shifted_lognormal, effective coding
 RT_val_m1 <- df_moral %>%
-  dplyr::mutate(RT_sec = RT/1000) %>% # log RT in seconds
-  dplyr::filter(ACC == 1) %>%         # only correct trials
-  brms::brm(RT_sec ~ Valence*ismatch_num + 
-                    (Valence*ismatch_num | ExpID_new) + 
-                    (Valence*ismatch_num | ExpID_new:Subject),
-            family=lognormal(),
-            data = .,
-            iter = 3000,
-            control = list(adapt_delta = .95),
-            cores = parallel::detectCores(),
-            backend = 'cmdstanr',  # with cmdstanr
-            file = here::here("glmmModels/RT_val_EffectCode_3_level"))
+        dplyr::mutate(RT_sec = RT/1000) %>% # log RT in seconds
+        dplyr::filter(ACC == 1) %>%         # only correct trials
+        brms::brm(RT_sec ~ Valence*ismatch_num + 
+                          (Valence*ismatch_num | ExpID_new) + 
+                          (Valence*ismatch_num | ExpID_new:Subject),
+                  family=lognormal(),
+                  data = .,
+                  chains = 4,
+                  iter = 4000,
+                  thin = 2,
+                  control = list(adapt_delta = .95),
+                  cores = parallel::detectCores(),
+                  backend = 'cmdstanr',  # with cmdstanr
+                  file = here::here("glmmModels/RT_val_EffectCode_3_level"))
 
 # plot(RT_val_m1, "b_")
 
@@ -833,7 +854,7 @@ sdt_ms_m1 <- df_ms %>%
                           (0 + Identity:Valence + ismatch:Identity:Valence | ExpID_new:Subject),
                   family = bernoulli(link="probit"),
                   data = .,
-                  chains = 6,
+                  chains = 4,
                   iter = 4000,
                   thin = 2,
                   control = list(adapt_delta = .90),
@@ -1083,14 +1104,14 @@ RT_ms_m1 <- df_ms %>%
               (ismatch*Identity*Valence | ExpID_new:Subject),
             family=lognormal(),
             data = .,
-            chains = 6,
+            chains = 4,
             control = list(adapt_delta = .90),
             iter = 4000,
             thin = 2,
             cores = parallel::detectCores(),
             backend = 'cmdstanr',  # with cmdstanr
             file = here::here("glmmModels/RT_ms_DummyCode_3_level"))
-
+summary(RT_ms_m1) # R-hat still has problem
 # pp_check(RT_val_m1)
 
 # Population-Level Effects: 
