--- a/Suppl_Materials_individual_Exp.rmd
+++ b/Suppl_Materials_individual_Exp.rmd
@@ -272,81 +272,9 @@ where the $HR$ means hit rate and the $FAR$ mean false alarm rate. $zHR$ and $zF
 
 For the RTs, we used mean RTs of the accurate trials of each condition and subject for repeated measures ANOVA. 
 
-#### Bayesian hierarchical generalized linear model (GLM)
-The maximum likelihood estimate of parameters of EVSDT may ignored the uncertainty in estimates of the parameters [@Rouder_2005_BHM_SDT]. Bayesian generalized linear model (GLM) can help to estimate the uncertainty of parameters. We used BRMs [@Bürkner_2017; @Carpenter_2017_stan] to model the data. 
+#### Bayesian hierarchical models (BHMs)
+As in the main text, we used Bayesian hierarchical models (BHMs) to model the data and estimate the *d* prime for signal detection theory approach and the reaction times data. We used BRMs [@Bürkner_2017; @Carpenter_2017_stan] in R to implement Bayesian hierarchical models. 
 
-In the GLM model, we assume that the outcome of each trial is Bernoulli distributed (binomial with 1 trial), with probability $p_{i}$ that $y_{i} = 1$. 
-
-$$ y_{i} \sim Bernoulli(p_{i})$$
-In the perceptual matching task, the probability $p_{i}$ can then be modeled as a function of the trial type:
-
-$$ \Phi(p_{i}) =  \beta_{0} + \beta_{1}IsMatch_{i}$$
-The outcomes $y_{i}$ are 0 if the participant responded "nonmatch" on trial $i$, 1 if they responded "match". The probability of the "match" response for trial $i$ for a participant is $p_{i}$. We then write the generalized linear model on the probits (z-scores; $\Phi$, "Phi") of $p$s. $\Phi$ is the cumulative normal density function and maps $z$ scores to probabilities. Given this parameterization, the intercept of the model ($\beta_0$) is the standardized false alarm rate (probability of saying 1 when predictor is 0), which we take as our criterion $c$. The slope of the model ($\beta_1$) is the increase of saying 1 when predictor is 1, in $z$-scores,  which is another expression of $d'$. Therefore, $c$ = -$z$HR = $-\beta_0$, and $d' = \beta_1$.
-
-In each experiment, we had multiple participants, then we need also consider the variations between subjects, i.e., a hierarchical mode in which individual's parameter and the the population level parameter are estimated simultaneously. We assume that the outcome of each trial is Bernoulli distributed (binomial with 1 trial), with probability $p_{ij}$ that $y_{ij} = 1$. 
-
-$$ y_{ij} \sim Bernoulli(p_{ij})$$
-Similarly, the generalized linear model was extended to two levels:
-$$ \Phi(p_{ij}) =  \beta_{0j} + \beta_{1j}IsMatch_{ij}$$
-The outcomes $y_{ij}$ are 0 if participant $j$ responded "nonmatch" on trial $i$, 1 if they responded "match". The probability of the "match" response for trial $i$ for subject $j$ is $p_{ij}$. We again can write the generalized linear model on the probits (z-scores; $\Phi$, "Phi") of $p$s. 
-
-The subjective-specific intercepts ($\beta_{0} = -zFAR$) and slopes ($\beta_{1} = d'$) are describe by multivariate normal with means and a covariance matrix for the parameters.
-$$ \begin{bmatrix}\beta_{0j}\\
-\beta_{1j}\\
-\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
-\theta_{1}\\
-\end{bmatrix}, \sum) $$
-
-In the same vein, when trying to estimate the parameter across different experiments, we can further consider the participant is nested in different experiments, and each experiment, because of its variation in stimuli or stimuli presentation, may have different intercepts and slopes. In this case, we can use a nested hierarchical model to model all the experiment with similar design:
-$$y_{ijk} \sim Bernoulli(p_{ijk})$$
-where 
-$$ \Phi(p_{ijk}) =  \beta_{0jk} + \beta_{1jk}IsMatch_{ijk}$$
-The outcomes $y_{ijk}$ are 0 if participant $j$ in experiment k responded "nonmatch" on trial $i$, 1 if they responded "match". 
-
-$$\begin{bmatrix}\beta_{0jk}\\
-\beta_{1jk}\\
-\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0k}\\
-\theta_{1k}\\
-\end{bmatrix}, \sum)$$
-
-and the experiment level parameter $mu_{0k}$ and $mu_{1k}$ is from a higher order distribution:
-
-$$\begin{bmatrix}\theta_{0k}\\
-\theta_{1k}\\
-\end{bmatrix} \sim N(\begin{bmatrix}\mu_{0}\\
-\mu_{1}\\
-\end{bmatrix}, \sum)$$
-in which $\mu_{0}$ and $\mu_{1}$ means the population level parameter.
-
-Using the Bayesian hierarchical model, we can directly estimate the over-all effect of valence on $d'$ across all experiments with similar experimental design, instead of using a two-step approach where we first estimate the $d'$ for each participant and then use a random effect model meta-analysis [@Goh_2016_mini]. 
-
-For the reaction time, there are many criticism about using the mean RTs as the representation of each participant [@Rousselet_2019], to better capture a representative parameter for RTs, we used the log normal distribution (https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal). This distribution has two parameters: $\mu$, $\sigma$. $\mu$ is the mean of the logNormal distribution, and $\sigma$ is the disperse of the distribution. The log normal distribution can be extended to shifted log normal distribution, with one more parameter: shift, which is the earliest possible response.
-
-$$y_{i} = \beta_{0} + \beta_{1}*IsMatch_{i} * Valence_{i}$$
-
-Shifted log-normal distribution:
-$$ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})$$ 
-$y_{ij}$ is the RT of the $i$th trial of the $j$th participants.
-
-$$\mu_{j} \sim N(\mu, \sigma)$$
-
-$$\sigma_{j} \sim Cauchy()$$
-
-This model can be easily expand to three-level model in which participants and experiments are two group level variable and participants were nested in the experiments.
-$$ log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})$$ 
-
-$y_{ijk}$ is the RT of the $i$th trial of the $j$th participants in the $k$th experiment.
-
-$$\mu_{jk} \sim N(\mu_{k}, \sigma_{k})$$
-
-$$\sigma_{jk} \sim Cauchy()$$
-
-$$\theta_{jk} \sim Cauchy()$$
-
-$$\mu_{k} \sim N(\mu, \sigma)$$
-
-#### Hierarchical drift diffusion model (HDDM)
- To further explore the psychological mechanism under perceptual decision-making, we used HDDM [@wiecki_hddm_2013] to model our RTs and accuracy data. We used the prior implemented in HDDM, that is, informative priors that constrains parameter estimates to be in the range of plausible values based on past literature [@matzke_psychological_2009] 
  <!-- Shall I write more about HDDM here, or just refer the interested reader to the paper? -->
 
 ## Results
@@ -465,52 +393,6 @@ exp1a_sdt_p[[1]] + exp1a_sdt_p[[2]] + exp1a_sdt_p[[3]] + exp1a_sdt_p[[4]] + exp1
 
 We fitted a Bayesian hierarchical GLM for RTs, with a log-normal distribution as the link function. We used the posterior distribution of the regression coefficient to make statistical inferences. As in previous studies, the matched conditions are much faster than the mismatched trials ($P_{PosteriorComparison} = 1$). We focused on matched trials only, and compared different conditions: Good is faster than the neutral, $P_{PosteriorComparison} = .99$, it was also faster than the Bad condition, $P_{PosteriorComparison} = 1$. And the neutral condition is faster than the bad condition, $P_{PosteriorComparison} = .99$. However, the mismatched trials are largely overlapped. See Figure \@ref(fig:plot-exp1a-BGLM).
 
-### HDDM
-
-```{r plot-exp1a-HDDM, fig.cap="Exp1a: Results of HDDM.",  fig.height=4.5, fig.width=9, warning=FALSE}
-df1a.hddm.group.trace <- read_csv(here::here('HDDM','df1a_group_traces.csv'))
-
-params_p <- df1a.hddm.group.trace %>%
-  dplyr::mutate(sample = 1:nrow(.)) %>%
-  dplyr::select(chain, sample, contains('Match') | contains('Mismatch')) %>%
-  tidyr::pivot_longer(.,`a(Match.Bad)`:`t(Mismatch.Neutral)`, names_to = 'conditions', values_to = 'value') %>%
-  tidyr::separate(., conditions, into = c('v1', 'valence'), sep= '[.]') %>%       # split into two part
-  tidyr::separate(., v1, into = c('param', 'matchness'), sep = '[(]') %>%         # further split the first half into two part
-  dplyr::mutate(valence = stringr::str_sub(.$valence, start = 1, end = -2)) %>%   # remove the last two elements ') ' from the strings
-  dplyr::arrange(., param) %>%
-  tidyr::pivot_wider(., id_cols = c('chain', 'sample', 'matchness', 'valence'), names_from = 'param', values_from = 'value')
-
-params_p %>% 
-  dplyr::mutate(valence = factor(valence, levels = c("Good", "Neutral", "Bad"))) %>%
-  ggplot2::ggplot(., aes(x = v, y = a, group = valence, color = valence)) +
-  geom_point() + 
-  facet_grid(~ matchness) +
-  ylab(expression(paste("Boundary separation ",italic("a"), sep = ' '))) +
-  xlab(expression(paste("Drift rate ",italic("v"), sep = ' '))) +
-  theme_bw()+
-    theme(panel.grid.major = element_blank(),
-          panel.grid.minor = element_blank(),
-          panel.background = element_blank(),
-          panel.border = element_blank(),
-          text=element_text(family='Times'),
-          legend.title=element_blank(),
-          legend.text = element_text(size =16),
-          plot.title = element_text(lineheight=.8, face="bold", size = 18, margin=margin(0,0,20,0)),
-          axis.text = element_text (size = 16, color = 'black'),
-          axis.title = element_text (size = 16),
-          #axis.title.x = element_blank(),
-          #axis.title.y = element_blank(),
-          axis.line.x = element_line(color='black', linewidth = 1),    # increase the size of font
-          axis.line.y = element_line(color='black', linewidth = 1),    # increase the size of font
-          strip.text = element_text (size = 16, color = 'black'), # size of text in strips, face = "bold"
-          panel.spacing = unit(3, "lines")
-    ) 
-```
-
-We fitted our data with HDDM, using the response-coding [See also, @Hu_2020_GoodSelf]. We estimated separate drift rate ($v$), non-decision time ($T_{0}$), and boundary separation ($a$) for each condition. We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see figure ).
-![HDDM results of Exp 1a](HDDM/exp1a_hddm_vta_pairplot.pdf){width=500px}
-
-
 # Experiment 1b
 In this study, we aimed at excluding the potential confounding factor of the familiarity of words we used in experiment 1a, by matching the familiarity of the words.
 
@@ -543,7 +425,7 @@ Val_plot_NHST(df.rt = df1b.v.rt_m, df.d = df1b.v.dprime_l)
 
 Figure \@ref(fig:ex1b-dprime-rt) shows *d* prime and reaction times of experiment 1b. 
 
-#### d prime
+#### *d* prime
 
 ```{r 1b_dprime, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # anova for d prime
@@ -649,20 +531,8 @@ exp1b_sdt_p[[1]] + exp1b_sdt_p[[2]] + exp1b_sdt_p[[3]] + exp1b_sdt_p[[4]] + exp1
 
 We fitted a Bayesian hierarchical GLM for RTs, with a log-normal distribution as the link function. We used the posterior distribution of the regression coefficient to make statistical inferences. As in previous studies, the matched conditions are much faster than the mismatched trials ($P_{PosteriorComparison} = 1$). We focused on matched trials only, and compared different conditions: Good is faster than the neutral, $P_{PosteriorComparison} = .99$, it was also faster than the Bad condition, $P_{PosteriorComparison} = 1$. And the neutral condition is faster than the bad condition, $P_{PosteriorComparison} = .99$. However, the mismatched trials are largely overlapped. See Figure \@ref(fig:plot-exp1b-BGLM).
 
-#### HDDM
-We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see figure ).
-
-```{r plot-exp1b-HDDM, fig.cap="Exp1b: Results of HDDM.",  fig.height=4.5, fig.width=9, warning=FALSE}
-library(patchwork)
-exp1b_sdt_p[[1]] + exp1b_sdt_p[[2]] + exp1b_sdt_p[[3]] + exp1b_sdt_p[[4]] + exp1b_rt_p[[1]] + exp1b_rt_p[[2]] + exp1b_rt_p[[3]] + exp1b_rt_p[[4]] + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 4, byrow = FALSE)
-```
-
-
-** insert figure of HDDM **
-
 ## Discussion
 These results confirmed the facilitation effect of positive moral valence on the perceptual matching task. This pattern of results mimic prior results demonstrating self-bias effect on perceptual matching (Sui et al., 2012) and in line with previous studies that indirect learning of other’s moral reputation do have influence on our subsequent behavior (Fouragnan et al., 2013). 
-
 
 # Experiment 1c
 In this study, we further control the valence of words using in our experiment. Instead of using label with moral valence, we used valence-neutral names in China. Participant first learn behaviors of the different person, then, they associate the names and shapes. And then they perform a name-shape matching task.
@@ -756,12 +626,6 @@ exp1c_rt_p <- fun_plot_rt_val(exp1c_rt_m1)
 library(patchwork)
 exp1c_sdt_p[[1]] + exp1c_sdt_p[[2]] + exp1c_sdt_p[[3]] + exp1c_sdt_p[[4]] + exp1c_rt_p[[1]] + exp1c_rt_p[[2]] + exp1c_rt_p[[3]] + exp1c_rt_p[[4]] + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 4, byrow = FALSE)
 ```
-
-
-### HDDM
-We fitted our data with HDDM, using the response-coding [also see Hu_2020_GoodSelf]. We estimated separate drift rate ($v$), non-decision time ($T_{0}$), and boundary separation ($a$) for each condition. We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see figure ).
-
-
 
 ## Discussion
 Experiment 1c was conducted in a old way, i.e., we peeked the data when we collected around 20 participants, and decided to stop because the non-significant results. Although the results were not significant, the pattern was consistent with previous two studies.
@@ -1082,7 +946,7 @@ The effect of moral valence was also significant for the other-relevance conditi
 
 We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self  vs. good-stranger, *t*(55) = 4.29, *p* < 0.001, Cohen’s *d* = 0.573, 95% CI [0.288 0.854], BF10 = 297.2; neutral-self  vs. neutral -stranger, *t*(55) = 7.17, *p* < 0.001, Cohen’s *d* = 0.958, 95% CI [0.638 1.272]), BF10 = 5.77e+6; bad-self vs. bad-other, *t*(55) = 6.03, *p* < 0.001, Cohen’s *d* = 0.806, 95% CI [0.5 1.11], BF10 = 100208.03.
 
-For the mismacthed trials, we also found interaction between of valence and identity, `r df3b_RT_anova_nm_apa$full$Identity_Valence`. Further analysis showed that there was effect of valence for other-referential trials (`r df3b_RT_anova_nm_o_apa$full$Valence`) but not for the self-referential trials (`r df3b_RT_anova_nm_s_apa$full$Valence`). Post-hoc comparison revealed that bad-other trials (857 $\pm$ 20.9) were responded faster than good (967 $\pm$ 25.1), *t* = -9.625, *p* < 0.0001, and neutral (876 $\pm$ 21.4) trials, *t* = -2.263, *p* = 0.697, good-other conditions were also slower than neutral-other, *t* = -8.016, *p* < 0.0001
+For the nonmatch trials, we also found interaction between of valence and identity, `r df3b_RT_anova_nm_apa$full$Identity_Valence`. Further analysis showed that there was effect of valence for other-referential trials (`r df3b_RT_anova_nm_o_apa$full$Valence`) but not for the self-referential trials (`r df3b_RT_anova_nm_s_apa$full$Valence`). Post-hoc comparison revealed that bad-other trials (857 $\pm$ 20.9) were responded faster than good (967 $\pm$ 25.1), *t* = -9.625, *p* < 0.0001, and neutral (876 $\pm$ 21.4) trials, *t* = -2.263, *p* = 0.697, good-other conditions were also slower than neutral-other, *t* = -8.016, *p* < 0.0001
 
 ## Discussion
 In experiment 3b, we separated the self-referential and other-referential tasks into different blocks so that participants had lower cognitive load when finish the task. We replicated the pattern from experiment 3a that the valence effect is stronger when the stimuli were self-referential. Contrast to experiment 3a, however, we found that the self-referential condition is out-performed by other-referential conditions. This pattern suggest that the self-referential enhanced the valence effect, and the advantage to self might be relative instead of absolute.
